--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,11 +5,15 @@
   --grid-item-width: 355px;
   --header-height: 64px;
   --color-dark: #000;
-  --color-light: #fff;
+  --color-light: #fae6d2;
 }
 
 img {
   border-radius: 4px;
+}
+
+body {
+  background: var(--color-light);
 }
 
 /*
